--- a/Source/ZEEngine/ZECore/CMakeLists.txt
+++ b/Source/ZEEngine/ZECore/CMakeLists.txt
@@ -81,7 +81,7 @@ ze_add_source(ZETimeManager.h						Sources Headers ZEMC)
 ze_add_source(ZETimeParameters.cpp					Sources)
 ze_add_source(ZETimeParameters.h					Sources Headers ZEMC)
 ze_add_source(ZECrashHandler.cpp					Sources)
-ze_add_source(ZECrashHandler.h						Sources Headers)
+ze_add_source(ZECrashHandler.h						Sources Headers ZEMC)
 ze_add_source(ZECrashHandler_Windows.cpp			Sources PLATFORMS Windows)
 ze_add_source(ZESplashWindow.cpp					Sources)
 ze_add_source(ZESplashWindow.h						Sources)
