FIX: Windows resource problems has been fixed. MOD: ZECore main loop and execute functions has been reorganized.
svn path=/branches/v0.7.0-NewCore/; revision=2362

--- a/Source/ZEEngine/ZECore/CMakeLists.txt
+++ b/Source/ZEEngine/ZECore/CMakeLists.txt
@@ -47,6 +47,8 @@ ze_add_source(ZEConsole.cpp							Sources)
 ze_add_source(ZEConsole.h							Sources Headers)
 ze_add_source(ZEConsoleWindow.cpp					Sources)
 ze_add_source(ZEConsoleWindow.h						Sources Headers)
+ze_add_source(ZEConsoleWindowResources.h			Sources)
+ze_add_source(ZEConsoleWindowResources.rc			Sources)
 ze_add_source(ZECore.cpp							Sources)
 ze_add_source(ZECore.h								Sources Headers ZEMC)
 ze_add_source(ZEErrorManager.cpp					Sources)
@@ -73,7 +75,6 @@ ze_add_source(ZESystemMessageManager.cpp			Sources)
 ze_add_source(ZESystemMessageManager.h				Sources Headers)
 ze_add_source(ZESystemMessageHandler.cpp			Sources)
 ze_add_source(ZESystemMessageHandler.h				Sources Headers)
-ze_add_source(ZEWindowResources.h					Sources)
 ze_add_source(ZETimer.cpp							Sources)
 ze_add_source(ZETimer.h								Sources Headers ZEMC)
 ze_add_source(ZETimeManager.cpp						Sources)
