MOD: Crash report subsystem had major rewrite. (BROKEN BUILD !)
svn path=/branches/v0.7.0-NewCore/; revision=2367

--- a/Source/ZETools/ZECrashReport/CMakeLists.txt
+++ b/Source/ZETools/ZECrashReport/CMakeLists.txt
@@ -37,52 +37,68 @@ cmake_minimum_required (VERSION 2.8)
 
 include_directories(${CMAKE_CURRENT_BINARY_DIR})
 
-ze_add_source(ZECrashReport.cpp										Sources)
-ze_add_source(ZECrashReport.h										Sources)
-ze_add_source(ZECrashReportProvider.cpp								Sources)
-ze_add_source(ZECrashReportProvider.h								Sources)
-ze_add_source(ZECrashReportPackager.cpp								Sources)
-ze_add_source(ZECrashReportPackager.h								Sources)
-ze_add_source(ZECrashReportSender.cpp 								Sources)
-ze_add_source(ZECrashReportSender.h									Sources)
-ze_add_source(ZECrashReportApplicationInformationProvider.cpp		Sources)
-ze_add_source(ZECrashReportApplicationInformationProvider.h			Sources)
-ze_add_source(ZECrashReportSystemInformationProvider.cpp			Sources)
-ze_add_source(ZECrashReportSystemInformationProvider.h				Sources)
-ze_add_source(ZECrashReportDumpProvider.cpp							Sources)
-ze_add_source(ZECrashReportDumpProvider.h							Sources)
-ze_add_source(ZECIM.h 												Sources)
-ze_add_source(ZECIM.cpp												Sources)
-ze_add_source(ZECrashReportFileProvider.cpp							Sources)
-ze_add_source(ZECrashReportFileProvider.h							Sources)
-ze_add_source(ZECrashReportUserCommentProvider.cpp					Sources)
-ze_add_source(ZECrashReportUserCommentProvider.h					Sources)
+ze_add_source(ZECRCrashReport.cpp							Sources)
+ze_add_source(ZECRCrashReport.h								Sources)
+ze_add_source(ZECRProvider.cpp								Sources)
+ze_add_source(ZECRProvider.h								Sources)
+ze_add_source(ZECRProviderFile.cpp							Sources)
+ze_add_source(ZECRProviderFile.h							Sources)
+ze_add_source(ZECRProviderUserFeedback.cpp					Sources)
+ze_add_source(ZECRProviderUserFeedback.h					Sources)
+ze_add_source(ZECRProviderApplicationInformation.cpp		Sources)
+ze_add_source(ZECRProviderApplicationInformation.h			Sources)
+ze_add_source(ZECRProviderSystemInformation.cpp				Sources)
+ze_add_source(ZECRProviderSystemInformation.h				Sources)
+ze_add_source(ZECRProviderMemoryDump.cpp					Sources)
+ze_add_source(ZECRProviderMemoryDump.h						Sources)
+ze_add_source(ZECRPackager.cpp								Sources)
+ze_add_source(ZECRPackager.h								Sources)
+ze_add_source(ZECRSender.cpp 								Sources)
+ze_add_source(ZECRSender.h									Sources)
+ze_add_source(ZECRCIM.h 									Sources)
+ze_add_source(ZECRCIM.cpp									Sources)
 
-ze_add_source(ZECrashReportUIClickableLabel.h						Sources QtMocs)
-ze_add_source(ZECrashReportUIClickableLabel.cpp						Sources)
-ze_add_source(ZECrashReportUIMainWindow.h							Sources QtMocs)
-ze_add_source(ZECrashReportUIMainWindow.cpp							Sources)
-ze_add_source(CrashMainWindow.ui									Sources QtUI)
-ze_add_source(ZECrashReportUIPrivacyDialog.h 						Sources QtMocs)
-ze_add_source(ZECrashReportUIPrivacyDialog.cpp 						Sources)
-ze_add_source(PrivacyDialog.ui 										Sources QtUI)
-ze_add_source(ZECrashReportUIProgressWindow.h 						Sources QtMocs)
-ze_add_source(ZECrashReportUIProgressWindow.cpp 					Sources)
-ze_add_source(ProgressWindow.ui 									Sources QtUI)
-ze_add_source(ZECrashReportUIReportDialog.h 						Sources QtMocs)
-ze_add_source(ZECrashReportUIReportDialog.cpp 						Sources)
-ze_add_source(ReportDialog.ui 										Sources QtUI)
-ze_add_source(zecrashreportui.qrc									Sources QtResources)
-ze_add_source(ZECrashReportUIMain.cpp								Sources)
 
-qt5_add_resources (QtResourceFiles ${QtResources})
-qt5_wrap_ui (QtUIFiles ${QtUI})
-qt5_wrap_cpp (QtMocFiles  ${QtMocs})
+ze_add_source(ZECRWindow.cpp								Sources)
+ze_add_source(ZECRWindow.h									Sources QtMocs)
+ze_add_source(ZECRWindow.ui									Sources QtUI)
+ze_add_source(ZECRWindowPage.cpp							Sources)
+ze_add_source(ZECRWindowPage.h								Sources)
+ze_add_source(ZECRWindowGeneratingReport.cpp				Sources)
+ze_add_source(ZECRWindowGeneratingReport.h					Sources QtMocs)
+ze_add_source(ZECRWindowGeneratingReport.ui					Sources QtUI)
+ze_add_source(ZECRWindowInformation.cpp						Sources)
+ze_add_source(ZECRWindowInformation.h						Sources QtMocs)
+ze_add_source(ZECRWindowInformation.ui						Sources QtUI)
+ze_add_source(ZECRWindowUserFeedback.cpp					Sources)
+ze_add_source(ZECRWindowUserFeedback.h						Sources QtMocs)
+ze_add_source(ZECRWindowUserFeedback.ui						Sources QtUI)
+ze_add_source(ZECRWindowViewReport.cpp						Sources)
+ze_add_source(ZECRWindowViewReport.h 						Sources QtMocs)
+ze_add_source(ZECRWindowViewReport.ui 						Sources QtUI)
+ze_add_source(ZECRWindowViewPrivacyPolicy.cpp 				Sources)
+ze_add_source(ZECRWindowViewPrivacyPolicy.h 				Sources QtMocs)
+ze_add_source(ZECRWindowViewPrivacyPolicy.ui 				Sources QtUI)
+ze_add_source(ZECRWindowTransfering.cpp						Sources)
+ze_add_source(ZECRWindowTransfering.h 						Sources QtMocs)
+ze_add_source(ZECRWindowTransfering.ui 						Sources QtUI)
+ze_add_source(ZECRWindowTransferCompleted.cpp 				Sources)
+ze_add_source(ZECRWindowTransferCompleted.h 				Sources QtMocs)
+ze_add_source(ZECRWindowTransferCompleted.ui 				Sources QtUI)
+ze_add_source(ZECRTransferThread.cpp 						Sources)
+ze_add_source(ZECRTransferThread.h 							Sources QtMocs)
+
+ze_add_source(ZECRResources.qrc								Sources QtResources)
+ze_add_source(ZECRMain.cpp									Sources)
+
+qt5_add_resources(QtResourceFiles ${QtResources})
+qt5_wrap_ui(QtUIFiles ${QtUI})
+qt5_wrap_cpp(QtMocFiles  ${QtMocs})
 
 source_group("Generated" FILES ${QtResourceFiles} ${QtMocFiles} ${QtUIFiles})
 
-ze_add_executable(TARGET ZECrashReport
+ze_add_library(TARGET ZECRCrashReporter DLL
 	SOURCES ${Sources} ${QtMocFiles} ${QtUIFiles} ${QtResourceFiles}
 	LIBS ZEFoundation libTinyXML libZLib libCurl Ws2_32)
 
-qt5_use_modules(ZECrashReport Widgets)
+qt5_use_modules(ZECRCrashReporter Widgets)
