MOD: Application mentality in ZELNLauncer and ZELCLicense has been changed to product mentality in order combine multiple application into single product. MOD: ZELNLauncher configuration file moved from #E:/ZELauncher.ZEConfig to #E:/Configurations/ZELNLauncher.ZEConfig. MOD: Application node in ZELNLauncher.ZEConfig has been renamed to Product. FIX: Many bug fixes have been made on ZECRCrashReporter. FIX: Many bug fixes and improvements has been made on ZECrashHandler. REM: Removed old and deprecated files from ZECRCrashReporter. ADD: New fields (Name, Version, License) have been added to ZEApplicationModule for supplying data to ZECRCrashReport system.
svn path=/branches/v0.7.0-NewCore/; revision=2378

--- a/Source/ZEFoundation/CMakeLists.txt
+++ b/Source/ZEFoundation/CMakeLists.txt
@@ -136,4 +136,6 @@ ze_end_components(TARGET ZEFoundationStatic)
 ze_end_components(TARGET ZEFoundationBase)
 ze_end_components(TARGET ZEFoundation)
 
+target_compile_definitions(ZEFoundationStatic PUBLIC ZE_ZEFOUNDATIONSTATIC)
+
 ze_link(ZEFoundation LIBS rt PLATFORMS Unix)
