--- a/Source/ZETools/ZECrashReport/CMakeLists.txt
+++ b/Source/ZETools/ZECrashReport/CMakeLists.txt
@@ -39,6 +39,8 @@ include_directories(${CMAKE_CURRENT_BINARY_DIR})
 
 ze_add_source(ZECRCrashReport.cpp							Sources)
 ze_add_source(ZECRCrashReport.h								Sources)
+ze_add_source(ZECRCrashReporterParameters.cpp				Sources)
+ze_add_source(ZECRCrashReporterParameters.h					Sources)
 ze_add_source(ZECRProvider.cpp								Sources)
 ze_add_source(ZECRProvider.h								Sources)
 ze_add_source(ZECRProviderFile.cpp							Sources)
@@ -85,8 +87,6 @@ ze_add_source(ZECRWindowTransfering.ui 						Sources QtUI)
 ze_add_source(ZECRWindowTransferCompleted.cpp 				Sources)
 ze_add_source(ZECRWindowTransferCompleted.h 				Sources QtMocs)
 ze_add_source(ZECRWindowTransferCompleted.ui 				Sources QtUI)
-ze_add_source(ZECRTransferThread.cpp 						Sources)
-ze_add_source(ZECRTransferThread.h 							Sources QtMocs)
 
 ze_add_source(ZECRResources.qrc								Sources QtResources)
 ze_add_source(ZECRMain.cpp									Sources)
