FIX: Many fixes and improvements have been made on ZECRCrashReport. MOD: Provider classes of ZECRCrashReport have been renamed to Collectors.
svn path=/branches/v0.7.0-NewCore/; revision=2381

--- a/Source/ZETools/ZECrashReport/CMakeLists.txt
+++ b/Source/ZETools/ZECrashReport/CMakeLists.txt
@@ -37,22 +37,22 @@ cmake_minimum_required (VERSION 2.8)
 
 include_directories(${CMAKE_CURRENT_BINARY_DIR})
 
-ze_add_source(ZECRCrashReport.cpp							Sources)
-ze_add_source(ZECRCrashReport.h								Sources)
-ze_add_source(ZECRCrashReporterParameters.cpp				Sources)
-ze_add_source(ZECRCrashReporterParameters.h					Sources)
-ze_add_source(ZECRProvider.cpp								Sources)
-ze_add_source(ZECRProvider.h								Sources)
-ze_add_source(ZECRProviderFile.cpp							Sources)
-ze_add_source(ZECRProviderFile.h							Sources)
-ze_add_source(ZECRProviderUserFeedback.cpp					Sources)
-ze_add_source(ZECRProviderUserFeedback.h					Sources)
-ze_add_source(ZECRProviderApplicationInformation.cpp		Sources)
-ze_add_source(ZECRProviderApplicationInformation.h			Sources)
-ze_add_source(ZECRProviderSystemInformation.cpp				Sources)
-ze_add_source(ZECRProviderSystemInformation.h				Sources)
-ze_add_source(ZECRProviderMemoryDump.cpp					Sources)
-ze_add_source(ZECRProviderMemoryDump.h						Sources)
+ze_add_source(ZECRReport.cpp								Sources)
+ze_add_source(ZECRReport.h									Sources)
+ze_add_source(ZECRReportParameters.cpp						Sources)
+ze_add_source(ZECRReportParameters.h						Sources)
+ze_add_source(ZECRCollector.cpp								Sources)
+ze_add_source(ZECRCollector.h								Sources)
+ze_add_source(ZECRCollectorFile.cpp							Sources)
+ze_add_source(ZECRCollectorFile.h							Sources)
+ze_add_source(ZECRCollectorUserFeedback.cpp					Sources)
+ze_add_source(ZECRCollectorUserFeedback.h					Sources)
+ze_add_source(ZECRCollectorProductInfo.cpp					Sources)
+ze_add_source(ZECRCollectorProductInfo.h					Sources)
+ze_add_source(ZECRCollectorSystemInformation.cpp			Sources)
+ze_add_source(ZECRCollectorSystemInformation.h				Sources)
+ze_add_source(ZECRCollectorMemoryDump.cpp					Sources)
+ze_add_source(ZECRCollectorMemoryDump.h						Sources)
 ze_add_source(ZECRPackager.cpp								Sources)
 ze_add_source(ZECRPackager.h								Sources)
 ze_add_source(ZECRSender.cpp 								Sources)
