REM: Deprecated Serialize mechanism has been removed. FIX: Copy operator problem in ZEFile has been fixed. REM: ZECRCollectorSystemInformation has been rewritten to use msinfo32.exe instead of WMI mechanisms for more information. FIX: ZECRCrashReport privacy policy has been rewritten. MOD: ZECRCollector mechanisms has been changed in order simplify and fortify report generator process. MOD: ZECRReportViewer has been rewritten to read report files directly instead of using ZECRReport mechanism in order simplify operation. FIX: ZECrashHandler now transfer all of the virtual file system paths in order to predefined paths to be used in ZECRCrashReporter.
svn path=/branches/v0.7.0-NewCore/; revision=2384

--- a/Source/ZETools/ZECrashReport/CMakeLists.txt
+++ b/Source/ZETools/ZECrashReport/CMakeLists.txt
@@ -38,28 +38,23 @@ cmake_minimum_required (VERSION 2.8)
 include_directories(${CMAKE_CURRENT_BINARY_DIR})
 
 ze_add_source(ZECRReport.cpp								Sources)
-ze_add_source(ZECRReport.h									Sources)
+ze_add_source(ZECRReport.h									Sources ZEMC)
 ze_add_source(ZECRReportParameters.cpp						Sources)
 ze_add_source(ZECRReportParameters.h						Sources)
 ze_add_source(ZECRCollector.cpp								Sources)
-ze_add_source(ZECRCollector.h								Sources)
+ze_add_source(ZECRCollector.h								Sources ZEMC)
 ze_add_source(ZECRCollectorFile.cpp							Sources)
-ze_add_source(ZECRCollectorFile.h							Sources)
+ze_add_source(ZECRCollectorFile.h							Sources ZEMC)
 ze_add_source(ZECRCollectorUserFeedback.cpp					Sources)
-ze_add_source(ZECRCollectorUserFeedback.h					Sources)
+ze_add_source(ZECRCollectorUserFeedback.h					Sources ZEMC)
 ze_add_source(ZECRCollectorProductInfo.cpp					Sources)
-ze_add_source(ZECRCollectorProductInfo.h					Sources)
+ze_add_source(ZECRCollectorProductInfo.h					Sources ZEMC)
 ze_add_source(ZECRCollectorSystemInformation.cpp			Sources)
-ze_add_source(ZECRCollectorSystemInformation.h				Sources)
+ze_add_source(ZECRCollectorSystemInformation.h				Sources ZEMC)
 ze_add_source(ZECRCollectorMemoryDump.cpp					Sources)
-ze_add_source(ZECRCollectorMemoryDump.h						Sources)
-ze_add_source(ZECRPackager.cpp								Sources)
-ze_add_source(ZECRPackager.h								Sources)
+ze_add_source(ZECRCollectorMemoryDump.h						Sources ZEMC)
 ze_add_source(ZECRSender.cpp 								Sources)
-ze_add_source(ZECRSender.h									Sources)
-ze_add_source(ZECRCIM.h 									Sources)
-ze_add_source(ZECRCIM.cpp									Sources)
-
+ze_add_source(ZECRSender.h									Sources ZEMC)
 
 ze_add_source(ZECRWindow.cpp								Sources)
 ze_add_source(ZECRWindow.h									Sources QtMocs)
@@ -75,9 +70,6 @@ ze_add_source(ZECRWindowInformation.ui						Sources QtUI)
 ze_add_source(ZECRWindowUserFeedback.cpp					Sources)
 ze_add_source(ZECRWindowUserFeedback.h						Sources QtMocs)
 ze_add_source(ZECRWindowUserFeedback.ui						Sources QtUI)
-ze_add_source(ZECRWindowViewReport.cpp						Sources)
-ze_add_source(ZECRWindowViewReport.h 						Sources QtMocs)
-ze_add_source(ZECRWindowViewReport.ui 						Sources QtUI)
 ze_add_source(ZECRWindowViewPrivacyPolicy.cpp 				Sources)
 ze_add_source(ZECRWindowViewPrivacyPolicy.h 				Sources QtMocs)
 ze_add_source(ZECRWindowViewPrivacyPolicy.ui 				Sources QtUI)
@@ -87,6 +79,10 @@ ze_add_source(ZECRWindowTransfering.ui 						Sources QtUI)
 ze_add_source(ZECRWindowTransferCompleted.cpp 				Sources)
 ze_add_source(ZECRWindowTransferCompleted.h 				Sources QtMocs)
 ze_add_source(ZECRWindowTransferCompleted.ui 				Sources QtUI)
+
+ze_add_source(ZECRReportViewer.cpp							Sources)
+ze_add_source(ZECRReportViewer.h 							Sources QtMocs)
+ze_add_source(ZECRReportViewer.ui 							Sources QtUI)
 
 ze_add_source(ZECRResources.qrc								Sources QtResources)
 ze_add_source(ZECRMain.cpp									Sources)
@@ -99,6 +95,7 @@ source_group("Generated" FILES ${QtResourceFiles} ${QtMocFiles} ${QtUIFiles})
 
 ze_add_library(TARGET ZECRCrashReporter DLL
 	SOURCES ${Sources} ${QtMocFiles} ${QtUIFiles} ${QtResourceFiles}
+	ZEMC ${ZEMC}
 	LIBS ZEFoundation libTinyXML libZLib libCurl Ws2_32)
 
 qt5_use_modules(ZECRCrashReporter Widgets)
