MOD: ZECRWindow* classes has been renamed to ZECRPage*. MOD: ZECRCrashReport process has been improved by allowing user to choose whether to create the report in the first place or not.
svn path=/branches/v0.7.0-NewCore/; revision=2386

--- a/Source/ZETools/ZECrashReport/CMakeLists.txt
+++ b/Source/ZETools/ZECrashReport/CMakeLists.txt
@@ -62,26 +62,30 @@ ze_add_source(ZECRSender.h									Sources ZEMC)
 ze_add_source(ZECRWindow.cpp								Sources)
 ze_add_source(ZECRWindow.h									Sources QtMocs)
 ze_add_source(ZECRWindow.ui									Sources QtUI)
-ze_add_source(ZECRWindowPage.cpp							Sources)
-ze_add_source(ZECRWindowPage.h								Sources)
-ze_add_source(ZECRWindowGeneratingReport.cpp				Sources)
-ze_add_source(ZECRWindowGeneratingReport.h					Sources QtMocs)
-ze_add_source(ZECRWindowGeneratingReport.ui					Sources QtUI)
-ze_add_source(ZECRWindowInformation.cpp						Sources)
-ze_add_source(ZECRWindowInformation.h						Sources QtMocs)
-ze_add_source(ZECRWindowInformation.ui						Sources QtUI)
-ze_add_source(ZECRWindowUserFeedback.cpp					Sources)
-ze_add_source(ZECRWindowUserFeedback.h						Sources QtMocs)
-ze_add_source(ZECRWindowUserFeedback.ui						Sources QtUI)
-ze_add_source(ZECRWindowViewPrivacyPolicy.cpp 				Sources)
-ze_add_source(ZECRWindowViewPrivacyPolicy.h 				Sources QtMocs)
-ze_add_source(ZECRWindowViewPrivacyPolicy.ui 				Sources QtUI)
-ze_add_source(ZECRWindowTransfering.cpp						Sources)
-ze_add_source(ZECRWindowTransfering.h 						Sources QtMocs)
-ze_add_source(ZECRWindowTransfering.ui 						Sources QtUI)
-ze_add_source(ZECRWindowTransferCompleted.cpp 				Sources)
-ze_add_source(ZECRWindowTransferCompleted.h 				Sources QtMocs)
-ze_add_source(ZECRWindowTransferCompleted.ui 				Sources QtUI)
+ze_add_source(ZECRPage.cpp									Sources)
+ze_add_source(ZECRPage.h									Sources)
+ze_add_source(ZECRPageGenerateInformation.cpp				Sources)
+ze_add_source(ZECRPageGenerateInformation.h					Sources QtMocs)
+ze_add_source(ZECRPageGenerateInformation.ui				Sources QtUI)
+ze_add_source(ZECRPageUserFeedback.cpp						Sources)
+ze_add_source(ZECRPageUserFeedback.h						Sources QtMocs)
+ze_add_source(ZECRPageUserFeedback.ui						Sources QtUI)
+ze_add_source(ZECRPageGenerating.cpp						Sources)
+ze_add_source(ZECRPageGenerating.h							Sources QtMocs)
+ze_add_source(ZECRPageGenerating.ui							Sources QtUI)
+ze_add_source(ZECRPageSendInformation.cpp					Sources)
+ze_add_source(ZECRPageSendInformation.h						Sources QtMocs)
+ze_add_source(ZECRPageSendInformation.ui					Sources QtUI)
+ze_add_source(ZECRPageTransfering.cpp						Sources)
+ze_add_source(ZECRPageTransfering.h 						Sources QtMocs)
+ze_add_source(ZECRPageTransfering.ui 						Sources QtUI)
+ze_add_source(ZECRPageTransferCompleted.cpp 				Sources)
+ze_add_source(ZECRPageTransferCompleted.h 					Sources QtMocs)
+ze_add_source(ZECRPageTransferCompleted.ui 					Sources QtUI)
+
+ze_add_source(ZECRPrivacyPolicyViewer.cpp	 				Sources)
+ze_add_source(ZECRPrivacyPolicyViewer.h 					Sources QtMocs)
+ze_add_source(ZECRPrivacyPolicyViewer.ui 					Sources QtUI)
 
 ze_add_source(ZECRReportViewer.cpp							Sources)
 ze_add_source(ZECRReportViewer.h 							Sources QtMocs)
