ADD: .Debug postfix has been added to outputs of debug build in order to fix debug release library mismatches. FIX: ZE.exe lockups when misbehaving ZECRCrashHandler has been fixed by checking ZECRCrashHandler status periodically. FIX: Compile problem in ZEITIntegrityTool has been fixed.
svn path=/branches/v0.7.0-NewCore/; revision=2391

--- a/Source/ZETools/ZEITIntegrityTool/CMakeLists.txt
+++ b/Source/ZETools/ZEITIntegrityTool/CMakeLists.txt
@@ -52,7 +52,7 @@ qt5_add_resources(QtResourceOutputs ${QtResources})
 
 ze_add_executable(TARGET ZEITIntegrityTool
 	SOURCES ${Sources} ${QtMocOutputs} ${QtUIOutputs} ${QtResourceOutputs}
-	LIBS ZEFoundation ZEITIntegrity Qt5::WinMain)
+	LIBS ZEFoundation Qt5::WinMain)
 	
 qt5_use_modules(ZEITIntegrityTool Widgets)
 
