FIX: ZELoadingScreen double alpha transparency problem has been fixed. FIX: ZELoadingScreen fade in factor problem has been fixed. REM: ZERSTest application has been removed. FIX: ZEMetaCompiler release compile problem has been fixed. FIX: Compile issues caused by the merge in ZEDEditor have been fixed. ADD: ZETrainIG application has been reintroduced.
svn path=/branches/v0.7.0-NewCore/; revision=2419

--- a/Source/ZEDEditor/ZEDTrainIGEditor/CMakeLists.txt
+++ b/Source/ZEDEditor/ZEDTrainIGEditor/CMakeLists.txt
@@ -49,8 +49,8 @@ ze_add_source(ZEDTIVegetationWrapper.h					Sources ZEMC)
 ze_add_library(TARGET ZEDTrainIGEditor 
 	ZEMC ${ZEMC}
 	SOURCES ${Sources} ${QtMocFiles} ${QtUIFiles} 
-	LIBS ZEFoundation ZEDCore ZEDUserInterface ZETrainIG)
+	LIBS ZEFoundation ZEDCore ZEDUserInterface ZETrainIG-Module)
 
-ze_meta_register(LIBS ZETrainIG-Module)
+ze_meta_register(LIBS ZETrainIGModule)
 
 source_group("Generated" FILES ${QtMocFiles} ${QtUIFiles})
