MOD: Application names have been changed according to ZEIG naming convention. ADD: ZinekIG logo for ZESplashWindow has been added. FIX: Linking problem of ZEData has been fixed. FIX: Multi-Instance module loading bug has been fixed.
svn path=/branches/v0.7.0-NewCore/; revision=2437

--- a/Source/ZEEngine/ZECore/CMakeLists.txt
+++ b/Source/ZEEngine/ZECore/CMakeLists.txt
@@ -86,9 +86,11 @@ ze_add_source(ZECrashHandler.h						Sources Headers ZEMC)
 ze_add_source(ZECrashHandler_Windows.cpp			Sources PLATFORMS Windows)
 ze_add_source(ZESplashWindow.cpp					Sources)
 ze_add_source(ZESplashWindow.h						Sources)
+ze_add_source(ZESplashWindow_Logo.bmp				Sources ZEFC)
 
 ze_add_component(COMPONENT ZECore
 	TARGET ZEEngine 
 	SOURCES ${Sources}
 	HEADERS ${Headers}
-	ZEMC ${ZEMC})
+	ZEMC ${ZEMC}
+	ZEFC ${ZEFC})
