MOD: Further improvements has been made on frame interpolation and dead reckoning. ADD: New FrameSmoothingEnabled option, which controls frame linear interpolation and dead reckoning, has been added to ZETIModule.
svn path=/branches/v0.7.0-NewCore/; revision=2446

--- a/Source/ZEDEditor/ZEDTrainIGEditor/CMakeLists.txt
+++ b/Source/ZEDEditor/ZEDTrainIGEditor/CMakeLists.txt
@@ -49,7 +49,7 @@ ze_add_source(ZEDTIVegetationWrapper.h					Sources ZEMC)
 ze_add_library(TARGET ZEDTrainIGEditor 
 	ZEMC ${ZEMC}
 	SOURCES ${Sources} ${QtMocFiles} ${QtUIFiles} 
-	LIBS ZEFoundation ZEDCore ZEDUserInterface ZETrainIG-Module)
+	LIBS ZEFoundation ZEDCore ZEDUserInterface ZEIGRailModule)
 
 ze_meta_register(LIBS ZETrainIGModule)
 
