ADD: New ZEInitializableAsync class, which is ZETask based asynchronous parallel initializable mechanism, has been added. ADD: ZECore module system has been modified use ZEInitializableAsync to manage their initialization state in parallel like ZEEntity system. ADD: Dependency tracking has been added ZEModule mechanism. REM: Temporary ZECore::AddLateModule function has been removed in favor of Module Dependency Tracking. MOD: All modules has been migrated to new module system.
svn path=/branches/v0.7.0-NewCore/; revision=2451

--- a/Source/ZEFoundation/CMakeLists.txt
+++ b/Source/ZEFoundation/CMakeLists.txt
@@ -107,8 +107,10 @@ ze_add_source(ZEDestroyableCollector.cpp		SourcesShared HeadersShared)
 ze_add_source(ZEDestroyableCollector.h			SourcesShared)
 ze_add_source(ZEInitializable.cpp				SourcesShared)
 ze_add_source(ZEInitializable.h					SourcesShared HeadersShared)
-ze_add_source(ZETerminalUtils.h					SourcesShared HeadersShared)
+ze_add_source(ZEInitializableAsync.cpp			SourcesShared)
+ze_add_source(ZEInitializableAsync.h			SourcesShared HeadersShared)
 ze_add_source(ZETerminalUtils.cpp				SourcesShared)
+ze_add_source(ZETerminalUtils.h					SourcesShared HeadersShared)
 
 ze_add_source(ZEAutoExp.txt						Sources Headers)
 ze_add_source(ZE.natvis							Sources Headers)
