--- a/Source/ZEFoundation/ZEThread/CMakeLists.txt
+++ b/Source/ZEFoundation/ZEThread/CMakeLists.txt
@@ -40,6 +40,8 @@ ze_add_source(ZELock.h          	 	Sources Headers)
 ze_add_source(ZELockTests.cpp			Tests)
 ze_add_source(ZELockRW.cpp         		Sources)
 ze_add_source(ZELockRW.h          	 	Sources Headers)
+ze_add_source(ZESerialSection.cpp       Sources)
+ze_add_source(ZESerialSection.h         Sources Headers)
 ze_add_source(ZEMutex.cpp   			Sources)
 ze_add_source(ZEMutex_Unix.cpp   		Sources PLATFORMS Unix)
 ze_add_source(ZEMutex_Windows.cpp  		Sources PLATFORMS Windows)
